[package]
name = "bitfield-struct"
version = "0.10.1"
edition = "2021"
authors = ["Lars Wrenger <lars@wrenger.net>"]
description = "Struct-like procedural macro for bitfields."
keywords = ["bitfields", "bits", "proc-macro"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/wrenger/bitfield-struct-rs.git"
documentation = "https://docs.rs/bitfield-struct"
readme = "README.md"
license = "MIT"
rust-version = "1.83.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
num_enum_derive = { git = "https://github.com/tetofonta/num_enum", default-features = false, optional = true, features = ["const"] }

[dev-dependencies]
defmt = "0.3"
endian-num = { version = "0.2", features = ["linux-types"] }

[features]
num_enum = ["num_enum_derive"]
